<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimen_default"
    android:paddingBottom="@dimen/dimen_default"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_default" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_default" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user"
            android:visibility="visible"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/main_user"
            app:layout_constraintEnd_toStartOf="@+id/iv_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:visibility="visible"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/str_search"
            android:src="@drawable/icon_search"
            app:layout_constraintBottom_toBottomOf="@id/til_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/til_user"
            app:layout_constraintTop_toTopOf="@id/til_user" />


        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            android:contentDescription="@string/str_user"
            android:src="@drawable/icon_person"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_user" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/dimen_small"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintTop_toTopOf="@id/iv_user"
            app:layout_constraintBottom_toBottomOf="@id/iv_user"
            app:layout_constraintStart_toEndOf="@id/iv_user"
            tools:text="Anderson Roberto" />

        <ImageView
            android:id="@+id/iv_goto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/str_go_to"
            android:src="@drawable/icon_close"
            app:layout_constraintBottom_toBottomOf="@id/tv_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_separation"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/purple_700"
        android:layout_marginTop="@dimen/dimen_small"
        android:layout_marginBottom="@dimen/dimen_small"
        app:layout_constraintTop_toBottomOf="@id/cl_info"
        app:layout_constraintBottom_toTopOf="@id/rv_repo_item"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repo_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="10"
        app:layout_constraintTop_toBottomOf="@+id/view_separation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        tools:listitem="@layout/item_repository"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/tv_empty_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintTop_toBottomOf="@id/view_separation"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        android:text="@string/msg_empty_repository"/>

</androidx.constraintlayout.widget.ConstraintLayout>